--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
       <div class="calculator">
         <div class="btnarea">
             <div class="textArea">
-                <input id="input" type="text" class="text">
+                <input id="input" type="text" class="text" placeholder="0">
                 
             </div>
             <div class="firstrow">
-                <button onclick="btn(this)" class="actionBtn">C</button>
+                <button onclick="less(this)" class="actionBtn" value="less"><i class="fas fa-arrow-left"></i></button>
                 <button onclick="btn(this)" class="actionBtn">X</button>
                 <button onclick="btn(this)" class="actionBtn">%</button>
-                <button onclick="btn(this)" class="actionBtn">/</button>
+                <button onclick="remove()" class="actionBtn">C</button>
             </div>
             <div class="secondRow">
                 <button onclick="btn(this)" class="textBtn">7</button>
@@ -41,9 +41,9 @@
                 <button onclick="btn(this)" class="actionBtn">+</button>
             </div>
             <div class="secondRow">
-                <button onclick="btn(this)" class="actionBtn">SET</button>
-                <button onclick="btn(this)" class="textBtn">0</button>
                 <button onclick="btn(this)" class="textBtn">.</button>
+                <button onclick="btn(this)" class="textBtn">0</button>
+                <button onclick="btn(this)" class="actionBtn">/</button>
                 <button onclick="solution()" class="actionBtn">=</button>
             </div>
         </div>
